# kancolle-browser

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: build-fix.md  checkpoint.md  code-review.md  domain-bug-review.md  eval.md  extract-knowledge.md  harness-audit.md  learn.md  loop-start.md  multi-plan.md  (+15 more)
.reports/: codemap-diff.txt
public/: expedition-notify.html  formation-hint.html  overlay.html
scripts/: add_recommended.py  fix_recommended_areas.py  update_from_wiki.py  update_sortie_conditions.py
src/: App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: game-controls.json
src-tauri/data/: equipment_upgrades.json  expeditions.json  map_recommendations.json  sortie_quests.json
src-tauri/html/: game_controls.html
src-tauri/src/: ca.rs  commands.rs  cookie.rs  game_init.js  game_window.rs  lib.rs  main.rs  migration.rs  overlay.rs
src-tauri/src/api/: battle.rs  fleet.rs  formation.rs  minimap.rs  mod.rs  models.rs  ship.rs  tests.rs
src-tauri/src/api/dto/: battle.rs  mod.rs  request.rs
src-tauri/src/battle_log/: mod.rs  parser.rs  storage.rs
src-tauri/src/drive_sync/: auth.rs  engine.rs  files.rs  mod.rs
src-tauri/src/expedition/: mod.rs
src-tauri/src/improvement/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/quest_progress/: mod.rs
src-tauri/src/senka/: mod.rs
src-tauri/src/sortie_quest/: mod.rs
src-tauri/tests/fixtures/: api_get_member_questlist.json  api_port_port.json  api_req_sortie_battle.json
(+84 files in other folders)
