[package]
name = "kancolle-browser"
version = "0.2.0"
description = "Cross-platform KanColle Browser"
authors = ["shichiria"]
edition = "2021"
license = "MIT"
repository = "https://github.com/shichiria/kancolle-browser"

[lib]
name = "kancolle_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-proxy", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hudsucker = { version = "0.24", features = ["rcgen-ca", "rustls-client"] }
http = "1"
hyper = "1"
http-body-util = "0.1"
url = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
log = "0.4"
env_logger = "0.11"
google-drive3 = "7.0"
yup-oauth2 = "12"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio"] }
rustls = "0.23"
mime = "0.3"
open = "5"
md-5 = "0.10"
base64 = "0.22"
brotli = "8"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_urlencoded = "0.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSValue"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
